@@ -168,8 +168,11 @@
 				FILE_NAME_GLOB="*.f" />
 
 <MODE NAME="fortran"		FILE="fortran.xml"
-				FILE_NAME_GLOB="*.{for,fort,f77,f90}" />
+				FILE_NAME_GLOB="*.{for,fort,f77}" />
 
+<MODE NAME="fortran90"		FILE="fortran90.xml"
+				FILE_NAME_GLOB="*.{f90,f95,f03}" />			
+				
 <MODE NAME="foxpro"		FILE="foxpro.xml"
 				FILE_NAME_GLOB="*.prg" />
 
